<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editName"
        android:layout_width="292dp"
        android:layout_height="51dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/editName"
        android:inputType="textPersonName"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/editEmail"
        android:inputType="textEmailAddress"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.1234567890"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        app:layout_constraintVertical_bias="0.023"
        android:autofillHints="" />

    <TextView
        android:id="@+id/depView"
        android:layout_width="129dp"
        android:layout_height="22dp"
        android:layout_marginTop="13dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/depView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        app:layout_constraintVertical_bias="0.073" />

    <RadioGroup
        android:id="@+id/buttonGroup"
        android:layout_width="104dp"
        android:layout_height="140dp"
        android:checkedButton="@id/sisButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depView"
        app:layout_constraintVertical_bias="0.032">

        <RadioButton
            android:id="@+id/sisButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/sisButton"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/csButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/csButton"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/bioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/bioButton"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/othersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/othersButton"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/moodView"
        android:layout_width="188dp"
        android:layout_height="25dp"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/your_current_mood"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGroup"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="310dp"
        android:layout_height="61dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/submitButton"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodView"
        app:layout_constraintVertical_bias="0.788" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="308dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodView"
        app:layout_constraintVertical_bias="0.205" />
</androidx.constraintlayout.widget.ConstraintLayout>